# project-1-weenusdingus

./: .pre-commit-config.yaml  README.md  config_test.sh  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: classroom.yml
src/project1/: fsm.py  lexer.py  project1.py  token.py
tests/: __init__.py  passoff_utils.py  test_fsm.py  test_lexer.py  test_passoff_100.py  test_passoff_20.py  test_passoff_40.py  test_passoff_60.py  test_passoff_80.py  test_project1.py  test_token.py
tests/resources/project1-passoff/100/: answer101.txt  answer102.txt  input101.txt  input102.txt
tests/resources/project1-passoff/20/: answer22.txt  answer23.txt  input22.txt  input23.txt
tests/resources/project1-passoff/40/: answer41.txt  input41.txt
tests/resources/project1-passoff/60/: answer61.txt  answer62.txt  input61.txt  input62.txt
tests/resources/project1-passoff/80/: answer81.txt  answer82.txt  input81.txt  input82.txt
